<resources>
    <string name="app_name">HealthZoid</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="daily_diet">Daily Diet</string>
    <string name="water_intake">Water Intake</string>
    <string name="body_fat_percent_calculator">Body Fat Percent Calculator</string>
    <string name="social">Social</string>
    <string name="step_tracker">Step Tracker</string>
    <string name="goal_calories">Goal Calories</string>
    <string name="your_bmr_and_tee">Your BMR and TEE</string>
    <string name="volume_calculator">Volume Calculator</string>
    <string name="activity_calories">Activity Calories</string>
    <string name="review">Write a review</string>
    <string name="mystery_facts">Mystery Facts</string>
    <string name="nav_header_image">nav Header Image</string>
    <string name="grams_text">%1$.1f g</string>
    <string name="protein_grams_text">%1$.1f of 250 g</string>
    <string name="carbs_grams_text">%1$.1f of 400 g</string>
    <string name="fats_grams_text">%1$.1f of 100 g</string>
    <string name="total_kcals_text">%1$.1f of 3500 Kcals</string>
    <string name="kcals_text">%1$.1f Kcals</string>
    <string name="cal_text">%1$.2f cal</string>
    <string name="km_text">%1$.2f km</string>
    <string name="ml_text">Your today\'s water content is : %1$d ml</string>
    <string name="proteinconvert">Protein: %1$.1fg</string>
    <string name="carbsconvert">Carbs: %1$.1fg</string>
    <string name="fatsconvert">Fats: %1$.1fg</string>
    <string name="calories">Calories</string>
    <string name="protein">Protein</string>
    <string name="carbohydrates">Carbohydrates</string>
    <string name="fats">Fats</string>
    <string name="limit_exceeded">Limit Exceeded</string>
    <string name="breakfast"><u>Breakfast</u></string>
    <string name="lunch"><u>Lunch</u></string>
    <string name="snacks"><u>Snacks</u></string>
    <string name="dinner"><u>Dinner</u></string>
    <string name="foodimageview">foodImageView</string>
    <string name="food_title">Food Title</string>
    <string name="confirm_to_add">Confirm to add</string>
    <string name="food_items_added">%1$d Food Items Added</string>
    <string name="your_body_fat_percentage_is_0">Your body fat percentage is : 0%</string>
    <string name="your_body_fat_percentage">Your body fat percentage is : %1$.2f%2$s</string>
    <string name="your_goal_calories_are_0_00_kcal">Your goal calories are : 0.00 kcal a day</string>
    <string name="your_goal_calories_are">Your goal calories are : %1$.2f kcals a day</string>
    <string name="your_bmr_and_tee_are_0_0_and_0_0">Your BMR and TEE are: 0.0 and 0.0</string>
    <string name="your_bmr_and_tee_are">Your BMR and TEE are: %1$.1f and %2$.1f</string>
    <string name="your_workout_volume_is_0_0">Your workout volume is : 0.0</string>
    <string name="your_workout_volume_is">Your workout volume is : %1$.2f</string>
    <string name="your_activity_calories_are_0_0">Your activity calories are : 0.0 kcal</string>
    <string name="your_activity_calories_are">Your activity calories are : %1$.2f kcals</string>
    <string name="did_you_know">Did You Know? 🤔🤔</string>
    <string name="words">%d/250</string>
    <string name="client_id">Your id</string>
</resources>